--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
     "stori-images": "bin/stori-images.js"
   },
   "scripts": {
-    "build": "echo \"The build step is not required when using JavaScript!\" && exit 0",
-    "cdk": "cdk",
-    "test": "jest"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "jest",
+    "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "20.12.7",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "aws-cdk": "2.142.1",
-    "jest": "^29.7.0"
+    "ts-node": "^10.9.2",
+    "typescript": "~5.4.5"
   },
   "dependencies": {
     "aws-cdk-lib": "2.142.1",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "source-map-support": "^0.5.21"
   }
 }
